// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vuex-bound global should handle array 1`] = `
"<div><input> foo
          </div>"
`;

exports[`vuex-bound global should handle array 2`] = `
"<div><input> bar
          </div>"
`;

exports[`vuex-bound global should handle nested object 1`] = `
"<div><input> fooBar
          </div>"
`;

exports[`vuex-bound global should handle nested object 2`] = `
"<div><input> newFooBar
          </div>"
`;

exports[`vuex-bound global should handle nested object with array 1`] = `
"<div><input> 3
          </div>"
`;

exports[`vuex-bound global should handle nested object with array 2`] = `
"<div><input> 4
          </div>"
`;

exports[`vuex-bound global should handle object 1`] = `
"<div><input> foo
          </div>"
`;

exports[`vuex-bound global should handle object 2`] = `
"<div><input> bar
          </div>"
`;

exports[`vuex-bound modules should handle array 1`] = `
"<div><input> foo
          </div>"
`;

exports[`vuex-bound modules should handle array 2`] = `
"<div><input> bar
          </div>"
`;

exports[`vuex-bound modules should handle nested object 1`] = `
"<div><input> fooBar
          </div>"
`;

exports[`vuex-bound modules should handle nested object 2`] = `
"<div><input> newFooBar
          </div>"
`;

exports[`vuex-bound modules should handle object 1`] = `
"<div><input> foo
          </div>"
`;

exports[`vuex-bound modules should handle object 2`] = `
"<div><input> bar
          </div>"
`;
